--- a/references.bib
+++ b/references.bib
@@ -1649,3 +1649,45 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/1996ApJ...462..563N},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{duchi12adaptive,
+  author =       {John Duchi and Elad Hazan and Yoram Singer},
+  title =        {Adaptive Subgradient Methods for Online Learning and Stochastic Optimization},
+  journal =      {Journal of Machine Learning Research},
+  year =         {2011},
+  volume =       {12},
+  pages =        {2121–2159}
+}
+
+@ARTICLE{nesterov83method,
+  author =       {Yurii Nesterov},
+  title =        {A method for unconstrained convex minimization problem with the rate of
+convergence $o(1/k^2)$},
+  journal =      {Doklady ANSSSR (translated as Soviet.Math.Docl.)},
+  year =         {1983},
+  volume =       {269},
+  pages =        {543–547}
+}
+ 
+
+ 
+
+ 
+@MISC{Tieleman12RMSProp,
+  author =       {Tijmen Tieleman and Geoffrey Hinton},
+  title =        {Root Mean Square Propagation. Divide the gradient by a running average of its recent magnitude. COURSERA: Neural Networks for Machine Learning},
+  howpublished ={\url{http://www.cs.toronto.edu/~tijmen/csc321/slides/lecture_slides_lec6.pdf}},
+  year =         {2012}
+  }
+
+
+@MISC{Ruder16overview,
+  author =       {Sebastian Ruder},
+  title =        {An overview of gradient descent optimization algorithms},
+  howpublished ={\url{https://arxiv.org/abs/1609.04747}},
+  year =         {2016}
+  }
+
+
+
+
