--- a/references.bib
+++ b/references.bib
@@ -1669,7 +1669,20 @@ convergence $o(1/k^2)$},
   pages =        {543–547}
 }
  
-
+@ARTICLE{2017Schaefer,
+   author = {{Schaefer}, C. and {Geiger}, M. and {Kuntzer}, T. and {Kneib}, J.
+	},
+    title = "{Deep Convolutional Neural Networks as strong gravitational lens detectors}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1705.07132},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Astrophysics of Galaxies},
+     year = 2017,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170507132S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
  
 
  
